<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/mn_bolos"
            android:title="@string/bolos" />
        <item
            android:id="@+id/mn_cafes"
            android:title="@string/cafes" />
        <item
            android:id="@+id/mn_paes"
            android:title="@string/paes" />
        <item
            android:id="@+id/mn_doces"
            android:title="@string/doces" />
        <item
            android:id="@+id/mn_omeletes"
            android:title="@string/omeletes" />
        <item
            android:id="@+id/mn_paes"
            android:title="@string/paes" />
        <item
            android:id="@+id/mn_salgados"
            android:title="@string/salgados" />
        <item
            android:id="@+id/mn_sanduiches"
            android:title="@string/sanduiches" />
        <item
            android:id="@+id/mn_cucas"
            android:title="Cucas" />
        <item
            android:id="@+id/mn_omeletes"
            android:title="@string/omeletes" />
            android:id="@+id/mn_tortas"
            android:title="@string/tortas" />
    </group>

</menu>
